--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         #header-logo {
             max-width: 300px; /* Максимальная ширина логотипа */
             height: auto;
-            margin-bottom: 20px; /* Отступ снизу */
+            margin-bottom: 20px; 
             display: block;
             margin-left: auto;
             margin-right: auto;
@@ -102,7 +102,7 @@
 
 <div class="container">
     <div class="header-section">
-        <img src="image_0.png" alt="Rich Flavour Логотип" id="header-logo">
+        <img src="image.png" alt="Rich Flavour Логотип" id="header-logo">
         
         <h1>Rich Flavour: Прайс-лист</h1>
         
